...
}

const DOT_CONFIGS: DotConfig[] = [
  {
    id: 'trial_period_dot',
    property: 'inTrialPeriod',
    label: 'In Trial Period',
  },
  {
    id: 'offer_period_dot',
    property: 'inIntroOfferPeriod',
    label: 'In Intro Offer Period',
  },
  {
    id: 'cancelled_dot',
    property: 'isCancelled',
    label: 'Has Cancelled',
  },
  {
    id: 'subscriber_dot',
    property: 'formerSubscriber',
    label: 'Former Subscriber',
  },
  {
    id: 'grace_period_dot',
    property: 'inGracePeriod',
    label: 'In Grace Period',
  },
  {
    id: 'account_hold_dot',
    property: 'inAccountHold',
    label: 'In Account Hold',
  },
  {
    id: 'pause_dot',
    property: 'inPause',
    label: 'In Pause',
  },
];

const Dot = ({
  isActive = false,
  testId,
...

  useLayoutEffect(() => {
    navigation.setOptions({
      headerRight: () => {
        return (
          <TouchableOpacity
            testID="login_btn"
            style={styles.headerButton}
            onPress={isUserLogin ? onLogoutPress : onLoginPress}
          >
            <Text
              testID="login_btn_text"
              style={styles.headerButtonText}>
              {isUserLogin ? 'Logout' : 'Login'}
            </Text>
          </TouchableOpacity>
        );
      },
...
  }, [navigation, isUserLogin, onLogoutPress, onLoginPress]);

  return (
    <SafeAreaView
      style={styles.container}
      edges={['right', 'bottom', 'left']}
      testID="profile_screen">
      <Text
        testID="profile_title"
        style={styles.title}>
        Profile
      </Text>
      <View style={styles.section}>
        <Text style={styles.sectionHeader}>
          {isUserLogin ? 'REGISTERED_USER' : 'ANONYMOUS USER'}
        </Text>
        <View style={styles.idSection}>
          <Text
            testID="user_id"
            style={styles.idLabel}>
            {isUserLogin ? 'Customer Id' : 'Device Id'}
          </Text>
          <Text style={styles.id}>
            {isUserLogin ? externalId : displayedDeviceId}
          </Text>
...
